--- a/index.html
+++ b/index.html
@@ -7,6 +7,87 @@
 	<title>Document</title>
 </head>
 <body>
-	
+	<header class="header">
+			<nav class="nav">
+				<img class="nav-img" src="img/Vector_Smart_Object.svg">
+				<p class="nav-subtext">Coffee Zone</p>
+				<ul class="nav-item">
+					<li class="nav-list">
+						<a class="nav-link" href="#">Home</a>
+					</li>
+					<li class="nav-list">
+						<a class="nav-link smooth" href="#about-us">About Us</a>
+					</li>
+					<li class="nav-list">
+						<a class="nav-link" href="#">Products</a>
+					</li>
+					<li class="nav-list">
+						<a class="nav-link" href="#">Blog</a>
+					</li>
+					<li class="nav-list">
+						<a class="nav-link" href="#">Gallery</a>
+					</li>
+					<li class="nav-list">
+						<a class="nav-link last" href="#">Contacts</a>
+					</li>
+				</ul>
+			</nav>
+			<div class="container">
+				<p class="header-subtext">fresh and tasty <br><strong>coffee </strong> <br> in the morning</p>
+				<div class="images">
+				<img class="image" src="img/2-layers.svg" width="300">
+				<img class="image" src="img/Vector_Smart_Object.png" width="150">
+				<img class="image" src="img/Vector_Smart_Object (1).png">
+				<img class="image" src="img/Vector_Smart_Object (2).png">
+				<img class="image" src="img/Vector_Smart_Object (3).png">
+				</div>
+			</div>
+	</header>
+	<section id="about-us" class="about-us">
+		<div class="container">
+			<div class="info">
+			<h1 class="about-us-title">About Us</h1>
+			<img class="about-us-image" src="img/3-layers.png" width="170">
+			<p class="about-us-subtext">Welcome To Coffee Zone</p>
+			<p class="subtext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+			<div class="flex">
+			<a href="#" class="about-us-link">Read More</a>
+			<button>
+			<img class="about-us-img" src="./img/2-layers (1).svg" width="60">
+			</button>
+			<button>
+			<img class="about-us-img" src="./img/2-layers (2).svg" width="60">
+			</button>
+			</div>
+			</div>
+			<div class="side">
+				<img src="img/2-layers.png" width="500">
+			</div>
+		</div>
+	</section>
+	<section class="collection">
+		<div class="container">
+			<h2 class="collection-title">Coffee Collection</h2>
+			<img class="collection-img" src="img/3-layers.png">
+			<div class="boxes">
+				<div class="brown"></div>
+				<div class="box">
+					<h3 class="box-title">Volestias</h3>
+					<img class="box-img" src="img/3-layers.png">
+					<p class="box-subtext">Lorem Ipsum is simply dummy text of standard dummy the the text ever since the 1500s.</p>
+				</div>
+				<div class="box">
+					<h3 class="box-title">Volestias</h3>
+					<img class="box-img" src="img/3-layers.png">
+					<p class="box-subtext">Lorem Ipsum is simply dummy text of standard dummy the the text ever since the 1500s.</p>
+				</div>
+				<div class="box">
+					<h3 class="box-title">Volestias</h3>
+					<img class="box-img" src="img/3-layers.png">
+					<p class="box-subtext">Lorem Ipsum is simply dummy text of standard dummy the the text ever since the 1500s.</p>
+				</div>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
