--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
-	<title>Document</title>
+	<title>Coffee shop</title>
 </head>
 <body>
-	<header class="header">
+	<header class="header" id="home">
 			<nav class="nav">
 				<img class="nav-img" src="img/Vector_Smart_Object.svg">
 				<p class="nav-subtext">Coffee Zone</p>
 				<ul class="nav-item">
 					<li class="nav-list">
-						<a class="nav-link" href="#">Home</a>
+						<a class="nav-link" href="#home">Home</a>
 					</li>
 					<li class="nav-list">
 						<a class="nav-link smooth" href="#about-us">About Us</a>
 					</li>
 					<li class="nav-list">
-						<a class="nav-link" href="#">Products</a>
+						<a class="nav-link" href="#menu">Products</a>
 					</li>
 					<li class="nav-list">
 						<a class="nav-link" href="#">Blog</a>
@@ -33,7 +33,7 @@
 				</ul>
 			</nav>
 			<div class="container">
-				<p class="header-subtext">fresh and tasty <br><strong>coffee </strong> <br> in the morning</p>
+				<p class="header-subtext">fresh and tasty<br><strong>coffee </strong><br>in the morning</p>
 				<div class="images">
 				<img class="image" src="img/2-layers.svg" width="300">
 				<img class="image" src="img/Vector_Smart_Object.png" width="150">
@@ -89,5 +89,212 @@
 			</div>
 		</div>
 	</section>
+	<section class="delivery">
+		<div class="container">
+			<div class="aside">
+				<h1 class="delivery-title">Sale and Delivery</h1>
+				<img class="delivery-img" src="img/3-layers.png">
+				<p class="delivery-subtext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+				<h2 class="aside-title">Where buy our coffee:</h2>
+				<div class="country">
+				<p class="countries">Canada</p>
+				<p class="countries">Argentina</p>
+				<p class="countries">Australia</p>
+				<p class="countries">Russia</p>
+				<p class="countries">Brazil</p>
+				<p class="countries">USA</p>
+				<p class="countries">Mexico</p>
+				<p class="countries">New York</p>
+				<p class="countries">Europe</p>
+				</div>
+				<a href="#" class="delivery-link">View all Points</a>
+			</div>
+			<div class="map">
+				<img class="map-img" src="img/Vector_Smart_Object (4).png">
+			</div>
+		</div>
+	</section>
+	<section class="menu" id="menu">
+		<div class="container">
+			<h1 class="menu-title">Today’s Menu</h1>
+			<img class="menu-img" src="img/3-layers (1).png">
+			<div class="wrapper">
+			<div class="left">
+				<h2 class="left-title">Coffee</h2>
+				<div class="line">
+				<p class="left-subtext">Ice Coffee</p>
+				<p class="price">$.10</p>
+				</div>
+				<hr>
+				<div class="line">
+				<p class="left-subtext">Cafe Latte</p>
+				<p class="price">$.20</p>
+				</div>
+				<hr>
+				<div class="line">						
+				<p class="left-subtext">Mocha</p>
+				<p class="price">$.20</p>
+				</div>
+				<hr>
+				<div class="line">
+				<p class="left-subtext">Espresso</p>
+				<p class="price">$.50</p>
+				</div>
+				<hr>
+				<div class="line">
+				<p class="left-subtext">Americano</p>
+				<p class="price">$.60</p>
+				</div>
+				<hr>
+			</div>
+			<img class="center" src="img/rasm.png">
+			<div class="right">
+				<h2 class="left-title">Chai & Infusion</h2>
+				<div class="line">
+				<p class="left-subtext">Ginger-Mint Chat</p>
+				<p class="price">$.50</p>
+				</div>
+				<hr>
+				<div class="line">
+				<p class="left-subtext">Elaichi Chai</p>
+				<p class="price">$.60</p>	
+				</div>
+				<hr>
+				<div class="line">					
+				<p class="left-subtext">Cold Coffee</p>
+				<p class="price">$.30</p>
+				</div>
+				<hr>
+				<div class="line">
+				<p class="left-subtext">Tea (Green Tea, Pomegranate)</p>
+				<p class="price">$.40</p>
+				</div>
+				<hr>
+				<div class="line">
+				<p class="left-subtext">Infusion (Fresh Mint, Gibger, Lemon & Honey)</p>
+				<p class="price">$.30</p>
+				</div>
+				<hr>
+			</div>
+		</div>
+	</section>
+	<section class="chefs">
+		<div class="container">
+			<h1 class="chefs-title">Our Master Chefs</h1>
+			<img class="chefs-img" src="img/naqsh.png">
+			<div class="wrapper">
+			<div class="scroll">
+				<button class="scroll-button">
+				<img class="scroll-img" src="img/2-layers (1).svg">
+				</button>
+				<div class="scroll-box"></div>
+				<button class="scroll-button">
+				<img class="scroll-img" src="img/2-layers (2).svg">
+				</button>
+			</div>
+			<div class="stars">
+				<h2 class="stars-title">Mahadi Tahsan</h2>
+				<img class="stars-img" src="img/Forma_1_copy_4.png">
+				<img class="stars-img" src="img/Forma_1_copy_4.png">
+				<img class="stars-img" src="img/Forma_1_copy_4.png">
+				<img class="stars-img" src="img/Forma_1_copy_4.png">
+				<img class="stars-img" src="img/Forma_1_copy_4.png">
+				<p class="stars-subtext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+				<div class="stars-wrapper">
+				<p class="chefs-subtext">Follow Me :</p>
+				<img class="chefs-stars-img" src="img/2-layers (1).png">
+				<img class="chefs-stars-img" src="img/2-layers (2).png">
+				<img class="chefs-stars-img" src="img/2-layers (3).png">
+				<img class="chefs-stars-img" src="img/2-layers (4).png">
+				</div>
+			</div>
+			</div>
+		</div>
+	</section>
+	<section class="instagram">
+		<div class="container">
+			<h1 class="instagram-title">Post From Instagram</h1>
+			<img class="instagram-img" src="img/naqsh.png">
+			<div class="instagram-wrapper">
+				<button class="instagram-wrapper-button">
+				<img class="instagram-wrapper-img" src="img/2-layers (1).svg">
+				</button>
+				<div class="instagram-wrapper-box"></div>
+				<div class="instagram-wrapper-box"></div>
+				<div class="instagram-wrapper-box"></div>
+				<div class="instagram-wrapper-box"></div>
+				<button class="instagram-wrapper-button">
+				<img class="instagram-wrapper-img" src="img/2-layers (2).svg">
+				</button>
+			</div>
+			<h1 class="instagram-container-title">From Our Blog</h1>
+			<img class="instagram-container-img" src="img/naqsh.png">
+			<div class="blog">
+				<div class="blog-box"></div>
+				<div class="blog-box"></div>
+				<div class="blog-box"></div>
+			</div>
+		</div>
+		<div class="info-wrapper">
+		<div class="info">
+			<h2 class="info-title">Black Coffee</h2>
+			<p class="info-subtext">Posted By: Admin   |   Dated: July 30 2019</p>
+			<p class="instagram-info-subtext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the dummy text ever since the 1500s.</p>
+			<a href="#" class="info-link">Read More</a>
+		</div>
+		<div class="info">
+			<h2 class="info-title">Cappuccino</h2>
+			<p class="info-subtext">Posted By: Admin   |   Dated: July 30 2019</p>
+			<p class="instagram-info-subtext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the dummy text ever since the 1500s.</p>
+			<a href="#" class="info-link">Read More</a>
+		</div>
+		<div class="info">
+			<h2 class="info-title">Coffee and Cake</h2>
+			<p class="info-subtext">Posted By: Admin   |   Dated: July 30 2019</p>
+			<p class="instagram-info-subtext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the dummy text ever since the 1500s.</p>
+			<a href="#" class="info-link">Read More</a>
+		</div>
+		</div>
+	</section>
+	<footer class="footer">
+		<div class="container">
+			<h2 class="footer-title">Customer Service</h2>
+			<a href="#" class="footer-subtext">My Account</a>
+			<a href="#" class="footer-subtext">Order History</a>
+			<a href="#" class="footer-subtext">FAQ</a>
+			<a href="#" class="footer-subtext">Specials</a>
+			<a href="#" class="footer-subtext">Help Center</a>
+			<h2 class="footer-title">Corporation</h2>
+			<a href="#" class="footer-subtext">About Us</a>
+			<a href="#" class="footer-subtext">Customer Service</a>
+			<a href="#" class="footer-subtext">Company</a>
+			<a href="#" class="footer-subtext">Investor Relations</a>
+			<a href="#" class="footer-subtext">Advanced Search</a>
+			<h2 class="footer-title">Why Choose Us</h2>
+			<a href="#" class="footer-subtext">Shopping Guide</a>
+			<a href="#" class="footer-subtext">Blog</a>
+			<a href="#" class="footer-subtext">Company</a>
+			<a href="#" class="footer-subtext">Investor Relations
+            </a>
+			<a href="#" class="footer-subtext">Advenced Search</a>
+			<h2 class="footer-title">Sign up for Email</h2>
+			<input class="footer-input" type="email">
+			<a href="#" class="footer-link">Subscribe</a>
+			<hr class="footer-hr">
+			<p class="footer-footer-wrapper-subtext">© 2019 Coffee Zone. All Rights Reserved.</p>
+			<a class="footer-container-link" href="#">
+			<img class="footer-img" src="img/2-layers (6).png">
+			</a>
+			<a class="footer-container-link" href="#">
+			<img class="footer-img" src="img/2-layers (7).png">
+		    </a>
+		    <a class="footer-container-link" href="#">
+			<img class="footer-img" src="img/2-layers (5).png">
+			</a>
+			<a class="footer-container-link" href="#">
+			<img class="footer-img" src="img/2-layers (8).png">
+			</a>
+		</div>
+	</footer>
 </body>
 </html>
