--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 						<a class="nav-link" href="#menu">Products</a>
 					</li>
 					<li class="nav-list">
-						<a class="nav-link" href="#">Blog</a>
+						<a class="nav-link" href="#blog">Blog</a>
 					</li>
 					<li class="nav-list">
-						<a class="nav-link" href="#">Gallery</a>
+						<a class="nav-link" href="#instagram">Gallery</a>
 					</li>
 					<li class="nav-list">
-						<a class="nav-link last" href="#">Contacts</a>
+						<a class="nav-link last" href="#link">Contacts</a>
 					</li>
 				</ul>
 			</nav>
@@ -202,16 +202,24 @@
 				<p class="stars-subtext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 				<div class="stars-wrapper">
 				<p class="chefs-subtext">Follow Me :</p>
+				<a href="#">
 				<img class="chefs-stars-img" src="img/2-layers (1).png">
+				</a>
+				<a href="#">
 				<img class="chefs-stars-img" src="img/2-layers (2).png">
+				</a>
+				<a href="#">
 				<img class="chefs-stars-img" src="img/2-layers (3).png">
+				</a>
+				<a href="#">
 				<img class="chefs-stars-img" src="img/2-layers (4).png">
+				</a>
 				</div>
 			</div>
 			</div>
 		</div>
 	</section>
-	<section class="instagram">
+	<section class="instagram" id="instagram">
 		<div class="container">
 			<h1 class="instagram-title">Post From Instagram</h1>
 			<img class="instagram-img" src="img/naqsh.png">
@@ -227,7 +235,7 @@
 				<img class="instagram-wrapper-img" src="img/2-layers (2).svg">
 				</button>
 			</div>
-			<h1 class="instagram-container-title">From Our Blog</h1>
+			<h1 id="blog" class="instagram-container-title">From Our Blog</h1>
 			<img class="instagram-container-img" src="img/naqsh.png">
 			<div class="blog">
 				<div class="blog-box"></div>
@@ -256,8 +264,9 @@
 		</div>
 		</div>
 	</section>
-	<footer class="footer">
+	<footer class="footer" id="link">
 		<div class="container">
+			<div class="footer-wrapper">
 			<h2 class="footer-title">Customer Service</h2>
 			<a href="#" class="footer-subtext">My Account</a>
 			<a href="#" class="footer-subtext">Order History</a>
@@ -278,10 +287,13 @@
             </a>
 			<a href="#" class="footer-subtext">Advenced Search</a>
 			<h2 class="footer-title">Sign up for Email</h2>
-			<input class="footer-input" type="email">
+			<input class="footer-input" placeholder="Enter your email" type="email">
 			<a href="#" class="footer-link">Subscribe</a>
+			</div>
 			<hr class="footer-hr">
+			<div class="margin">
 			<p class="footer-footer-wrapper-subtext">© 2019 Coffee Zone. All Rights Reserved.</p>
+			<div class="margin-right">
 			<a class="footer-container-link" href="#">
 			<img class="footer-img" src="img/2-layers (6).png">
 			</a>
@@ -294,6 +306,8 @@
 			<a class="footer-container-link" href="#">
 			<img class="footer-img" src="img/2-layers (8).png">
 			</a>
+			</div>
+			</div>
 		</div>
 	</footer>
 </body>
