--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/large.css">
+	<link rel="stylesheet" href="css/medium.css">
+	<link rel="stylesheet" href="css/small.css">
+	<link rel="stylesheet" href="css/extra small.css">
 	<title>Coffee shop</title>
 </head>
 <body>
@@ -91,6 +95,9 @@
 	</section>
 	<section class="delivery">
 		<div class="container">
+			<div class="map">
+				<img class="map-img" src="img/Vector_Smart_Object (4).png">
+			</div>
 			<div class="aside">
 				<h1 class="delivery-title">Sale and Delivery</h1>
 				<img class="delivery-img" src="img/3-layers.png">
@@ -108,9 +115,6 @@
 				<p class="countries">Europe</p>
 				</div>
 				<a href="#" class="delivery-link">View all Points</a>
-			</div>
-			<div class="map">
-				<img class="map-img" src="img/Vector_Smart_Object (4).png">
 			</div>
 		</div>
 	</section>
@@ -194,11 +198,13 @@
 			</div>
 			<div class="stars">
 				<h2 class="stars-title">Mahadi Tahsan</h2>
+				<div class="stars-images">
 				<img class="stars-img" src="img/Forma_1_copy_4.png">
 				<img class="stars-img" src="img/Forma_1_copy_4.png">
 				<img class="stars-img" src="img/Forma_1_copy_4.png">
 				<img class="stars-img" src="img/Forma_1_copy_4.png">
 				<img class="stars-img" src="img/Forma_1_copy_4.png">
+				</div>
 				<p class="stars-subtext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 				<div class="stars-wrapper">
 				<p class="chefs-subtext">Follow Me :</p>
@@ -227,9 +233,9 @@
 				<button class="instagram-wrapper-button">
 				<img class="instagram-wrapper-img" src="img/2-layers (1).svg">
 				</button>
-				<div class="instagram-wrapper-box"></div>
-				<div class="instagram-wrapper-box"></div>
-				<div class="instagram-wrapper-box"></div>
+				<div class="instagram-wrapper-box none"></div>
+				<div class="instagram-wrapper-box display"></div>
+				<div class="instagram-wrapper-box one"></div>
 				<div class="instagram-wrapper-box"></div>
 				<button class="instagram-wrapper-button">
 				<img class="instagram-wrapper-img" src="img/2-layers (2).svg">
@@ -238,30 +244,34 @@
 			<h1 id="blog" class="instagram-container-title">From Our Blog</h1>
 			<img class="instagram-container-img" src="img/naqsh.png">
 			<div class="blog">
+				<div class="info-wrapper">
 				<div class="blog-box"></div>
-				<div class="blog-box"></div>
-				<div class="blog-box"></div>
-			</div>
-		</div>
-		<div class="info-wrapper">
-		<div class="info">
+				<div class="info">
 			<h2 class="info-title">Black Coffee</h2>
 			<p class="info-subtext">Posted By: Admin   |   Dated: July 30 2019</p>
 			<p class="instagram-info-subtext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the dummy text ever since the 1500s.</p>
 			<a href="#" class="info-link">Read More</a>
 		</div>
-		<div class="info">
+	</div>
+			<div class="info-wrapper">
+				<div class="blog-box"></div>
+				<div class="info">
 			<h2 class="info-title">Cappuccino</h2>
 			<p class="info-subtext">Posted By: Admin   |   Dated: July 30 2019</p>
 			<p class="instagram-info-subtext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the dummy text ever since the 1500s.</p>
 			<a href="#" class="info-link">Read More</a>
 		</div>
-		<div class="info">
+	</div>
+			<div class="info-wrapper">
+				<div class="blog-box"></div>
+				<div class="info">
 			<h2 class="info-title">Coffee and Cake</h2>
 			<p class="info-subtext">Posted By: Admin   |   Dated: July 30 2019</p>
 			<p class="instagram-info-subtext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the dummy text ever since the 1500s.</p>
 			<a href="#" class="info-link">Read More</a>
 		</div>
+	</div>
+			</div>
 		</div>
 	</section>
 	<footer class="footer" id="link">
