--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <body>
 	<header class="header" id="home">
 			<nav class="nav">
+				<div class="logo">
 				<img class="nav-img" src="img/Vector_Smart_Object.svg">
 				<p class="nav-subtext">Coffee Zone</p>
+				</div>
 				<ul class="nav-item">
 					<li class="nav-list">
 						<a class="nav-link" href="#home">Home</a>
@@ -289,7 +291,7 @@
 			<a href="#" class="footer-subtext">Company</a>
 			<a href="#" class="footer-subtext">Investor Relations</a>
 			<a href="#" class="footer-subtext">Advanced Search</a>
-			<h2 class="footer-title">Why Choose Us</h2>
+			<h2 class="footer-title top">Why Choose Us</h2>
 			<a href="#" class="footer-subtext">Shopping Guide</a>
 			<a href="#" class="footer-subtext">Blog</a>
 			<a href="#" class="footer-subtext">Company</a>
