--- a/index.html
+++ b/index.html
@@ -191,11 +191,11 @@
 			<img class="chefs-img" src="img/naqsh.png">
 			<div class="wrapper">
 			<div class="scroll">
-				<button class="scroll-button">
+				<button class="scroll-button ong">
 				<img class="scroll-img" src="img/2-layers (1).svg">
 				</button>
 				<div class="scroll-box"></div>
-				<button class="scroll-button">
+				<button class="scroll-button chap">
 				<img class="scroll-img" src="img/2-layers (2).svg">
 				</button>
 			</div>
