--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 			<img class="menu-img" src="img/3-layers (1).png">
 			<div class="wrapper">
 			<div class="left">
-				<h2 class="left-title">Coffee</h2>
+				<h2 class="left-title direction">Coffee</h2>
 				<div class="line">
 				<p class="left-subtext">Ice Coffee</p>
 				<p class="price">$.10</p>
