--- a/index.html
+++ b/index.html
@@ -54,43 +54,32 @@
 		<div class="container">
 			<div class="info">
 			<h1 class="about-us-title">About Us</h1>
-			<img class="about-us-image" src="img/3-layers.png" width="170">
 			<p class="about-us-subtext">Welcome To Coffee Zone</p>
 			<p class="subtext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 			<div class="flex">
 			<a href="#" class="about-us-link">Read More</a>
-			<button>
-			<img class="about-us-img" src="./img/2-layers (1).svg" width="60">
-			</button>
-			<button>
-			<img class="about-us-img" src="./img/2-layers (2).svg" width="60">
-			</button>
 			</div>
 			</div>
 			<div class="side">
-				<img src="img/2-layers.png" width="500">
+				<img src="img/A15443AF-7E40-4508-9C04-71F60EE7B253.JPG" width="500">
 			</div>
 		</div>
 	</section>
 	<section class="collection">
 		<div class="container">
 			<h2 class="collection-title">Coffee Collection</h2>
-			<img class="collection-img" src="img/3-layers.png">
 			<div class="boxes">
 				<div class="brown"></div>
 				<div class="box">
 					<h3 class="box-title">Volestias</h3>
-					<img class="box-img" src="img/3-layers.png">
 					<p class="box-subtext">Lorem Ipsum is simply dummy text of standard dummy the the text ever since the 1500s.</p>
 				</div>
 				<div class="box">
 					<h3 class="box-title">Volestias</h3>
-					<img class="box-img" src="img/3-layers.png">
 					<p class="box-subtext">Lorem Ipsum is simply dummy text of standard dummy the the text ever since the 1500s.</p>
 				</div>
 				<div class="box">
 					<h3 class="box-title">Volestias</h3>
-					<img class="box-img" src="img/3-layers.png">
 					<p class="box-subtext">Lorem Ipsum is simply dummy text of standard dummy the the text ever since the 1500s.</p>
 				</div>
 			</div>
@@ -99,11 +88,10 @@
 	<section class="delivery">
 		<div class="container">
 			<div class="map">
-				<img class="map-img" src="img/Vector_Smart_Object (4).png">
+				<img class="map-img" src="img/маршруты-самолетов-на-карте-мира-самолет-пути-полета-воздушного-судна-163416144.png">
 			</div>
 			<div class="aside">
 				<h1 class="delivery-title">Sale and Delivery</h1>
-				<img class="delivery-img" src="img/3-layers.png">
 				<p class="delivery-subtext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 				<h2 class="aside-title">Where buy our coffee:</h2>
 				<div class="country">
@@ -188,16 +176,9 @@
 	<section class="chefs">
 		<div class="container">
 			<h1 class="chefs-title">Our Master Chefs</h1>
-			<img class="chefs-img" src="img/naqsh.png">
 			<div class="wrapper">
 			<div class="scroll">
-				<button class="scroll-button ong">
-				<img class="scroll-img" src="img/2-layers (1).svg">
-				</button>
 				<div class="scroll-box"></div>
-				<button class="scroll-button chap">
-				<img class="scroll-img" src="img/2-layers (2).svg">
-				</button>
 			</div>
 			<div class="stars">
 				<h2 class="stars-title">Mahadi Tahsan</h2>
@@ -231,24 +212,16 @@
 	<section class="instagram" id="instagram">
 		<div class="container">
 			<h1 class="instagram-title">Post From Instagram</h1>
-			<img class="instagram-img" src="img/naqsh.png">
 			<div class="instagram-wrapper">
-				<button class="instagram-wrapper-button">
-				<img class="instagram-wrapper-img" src="img/2-layers (1).svg">
-				</button>
 				<div class="instagram-wrapper-box none"></div>
 				<div class="instagram-wrapper-box display"></div>
 				<div class="instagram-wrapper-box one"></div>
-				<div class="instagram-wrapper-box"></div>
-				<button class="instagram-wrapper-button">
-				<img class="instagram-wrapper-img" src="img/2-layers (2).svg">
-				</button>
+				<div class="instagram-wrapper-box other"></div>
 			</div>
 			<h1 id="blog" class="instagram-container-title">From Our Blog</h1>
-			<img class="instagram-container-img" src="img/naqsh.png">
 			<div class="blog">
 				<div class="info-wrapper">
-				<div class="blog-box"></div>
+				<div class="blog-box third"></div>
 				<div class="info">
 			<h2 class="info-title">Black Coffee</h2>
 			<p class="info-subtext">Posted By: Admin   |   Dated: July 30 2019</p>
@@ -257,7 +230,7 @@
 		</div>
 	</div>
 			<div class="info-wrapper">
-				<div class="blog-box"></div>
+				<div class="blog-box second"></div>
 				<div class="info">
 			<h2 class="info-title">Cappuccino</h2>
 			<p class="info-subtext">Posted By: Admin   |   Dated: July 30 2019</p>
@@ -266,7 +239,7 @@
 		</div>
 	</div>
 			<div class="info-wrapper">
-				<div class="blog-box"></div>
+				<div class="blog-box first"></div>
 				<div class="info">
 			<h2 class="info-title">Coffee and Cake</h2>
 			<p class="info-subtext">Posted By: Admin   |   Dated: July 30 2019</p>
