--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<header class="header" id="home">
 			<nav class="nav">
 				<div class="logo">
-				<img class="nav-img" src="img/Vector_Smart_Object.svg">
+				<img class="nav-img" src="img/2CF7332D-646E-4F72-BB8D-E4FB4F5721DC-removebg-preview.png" width="100">
 				<p class="nav-subtext">Coffee Zone</p>
 				</div>
 				<ul class="nav-item">
