--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	<header class="header" id="home">
 			<nav class="nav">
 				<div class="logo">
-				<img class="nav-img" src="img/2CF7332D-646E-4F72-BB8D-E4FB4F5721DC-removebg-preview.png" width="100">
-				<p class="nav-subtext">Coffee Zone</p>
+					<img src="./img/Vector_Smart_Object.svg" alt="">
+					<p class="nav-subtext">Coffee Zone</p>
 				</div>
 				<ul class="nav-item">
 					<li class="nav-list">
@@ -53,7 +53,7 @@
 			</div>
 			</div>
 			<div class="side">
-				<img src="img/A15443AF-7E40-4508-9C04-71F60EE7B253.JPG" width="500">
+				<img src="img/zone.jpg" width="500" height="500">
 			</div>
 		</div>
 	</section>
@@ -80,7 +80,7 @@
 	<section class="delivery">
 		<div class="container">
 			<div class="map">
-				<img class="map-img" src="img/маршруты-самолетов-на-карте-мира-самолет-пути-полета-воздушного-судна-163416144.png">
+				<img class="map-img" src="img/Vector_Smart_Object (4).png">
 			</div>
 			<div class="aside">
 				<h1 class="delivery-title">Sale and Delivery</h1>
